--- a/index.html
+++ b/index.html
@@ -30,114 +30,89 @@
     </header>
     <section class="container min-vh-100">
       <!-- Timeblocks go here -->
-      <div id="hour9" class="time-block row">
+      <div id="h8" class="row time-block justify-content-center">
+        <nav class="col-md-1 hour">8:00am</nav>
+        <textarea class="col-sm-7 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="h9" class="row justify-content-center">
         <nav class="col-md-1 hour">9:00am</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour10" class="time-block row">
+
+      <div id="h10" class="row justify-content-center">
         <nav class="col-md-1 hour">10:00am</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour11" class="time-block row">
+
+      <div id="h11" class="row justify-content-center">
         <nav class="col-md-1 hour">11:00am</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour12" class="time-block row">
+
+      <div id="h12" class="row justify-content-center">
         <nav class="col-md-1 hour">12:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour1" class="time-block row">
+
+      <div id="h1" class="row justify-content-center">
         <nav class="col-md-1 hour">1:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour2" class="time-block row">
+
+      <div id="h2" class="row justify-content-center">
         <nav class="col-md-1 hour">2:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour3" class="time-block row">
+
+      <div id="h3" class="row justify-content-center">
         <nav class="col-md-1 hour">3:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour4" class="time-block row">
+
+      <div id="h4" class="row justify-content-center">
         <nav class="col-md-1 hour">4:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour5" class="time-block row">
+
+      <div id="h5" class="row justify-content-center">
         <nav class="col-md-1 hour">5:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour6" class="time-block row">
+
+      <div id="h6" class="row justify-content-center">
         <nav class="col-md-1 hour">6:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour7" class="time-block row">
-        <nav class="col-md-1 hour">7:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour8" class="time-block row">
-        <nav class="col-md-1 hour">8:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour9" class="time-block row">
-        <nav class="col-md-1 hour">9:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour10" class="time-block row">
-        <nav class="col-md-1 hour">10:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour11" class="time-block row">
-        <nav class="col-md-1 hour">11:00pm</nav>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-      <div id="hour12" class="time-block row">
-        <nav class="col-md-1 hour">12:00am</nav>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-sm-7 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
