--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Work Day Scheduler Using Third-Party APIs</title>
   </head>
 
   <body>
@@ -28,8 +28,15 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <section class="container min-vh-100">
+    <section class="container">
       <!-- Timeblocks go here -->
+      <div id="hour8" class="time-block row">
+        <nav class="col-md-1 hour">8:00am</nav>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
       <div id="hour9" class="time-block row">
         <nav class="col-md-1 hour">9:00am</nav>
         <textarea class="col-md-10 description"></textarea>
@@ -45,7 +52,7 @@
         </button>
       </div>
       <div id="hour11" class="time-block row">
-        <nav class="col-md-1 hour">11:00am</nav>
+        <nav class="col-md-1 hour">11:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
@@ -58,90 +65,90 @@
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour1" class="time-block row">
+      <div id="hour13" class="time-block row">
         <nav class="col-md-1 hour">1:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour2" class="time-block row">
+      <div id="hour14" class="time-block row">
         <nav class="col-md-1 hour">2:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour3" class="time-block row">
+      <div id="hour15" class="time-block row">
         <nav class="col-md-1 hour">3:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour4" class="time-block row">
+      <div id="hour16" class="time-block row">
         <nav class="col-md-1 hour">4:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour5" class="time-block row">
+      <div id="hour17" class="time-block row">
         <nav class="col-md-1 hour">5:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour6" class="time-block row">
+      <!-- <div id="hour18" class="time-block row">
         <nav class="col-md-1 hour">6:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour7" class="time-block row">
+      <div id="hour19" class="time-block row">
         <nav class="col-md-1 hour">7:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour8" class="time-block row">
+      <div id="hour20" class="time-block row">
         <nav class="col-md-1 hour">8:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour9" class="time-block row">
+      <div id="hour21" class="time-block row">
         <nav class="col-md-1 hour">9:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour10" class="time-block row">
+      <div id="hour22" class="time-block row">
         <nav class="col-md-1 hour">10:00pm</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour11" class="time-block row">
-        <nav class="col-md-1 hour">11:00pm</nav>
+      <div id="hour23" class="time-block row">
+        <nav class="col-md-1 hour">11:00am</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
-      <div id="hour12" class="time-block row">
+      <div id="hour24" class="time-block row">
         <nav class="col-md-1 hour">12:00am</nav>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
-      </div>
+      </div> -->
     </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
